--- a/style.css
+++ b/style.css
@@ -1,34 +1,42 @@
 body {
-  width: 150px;
+  width: 200px;
   height: 100px;
 }
 
 .body-div {
-  width: 180px;
+  width: 220px;
   height: 180px;
-  border: 1px solid #9C9C9C;
-  background-color: white;
+  border: 1px solid #E4E4E4;
+  background-color: #F6F6F4;
 }
 
 .button-capture {
-  border-radius: 2px;
+  border-radius: 5px;
   background-color: white;
-  padding: 8px 30px 8px 30px;
-  border: 1px solid #9C9C9C;
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.05);
+  padding: 5px 25px 5px 25px;
+  border: 1px solid #E4E4E4;
+  font-family: "Open Sans", sans-serif;
 }
 
 .button-capture:hover {
-  transform: scale(1.03);
+  transform: scale(1.01);
   color: #666666;
 }
+
+.choose-folder {
+  border-radius: 5px;
+  padding: 2px 8px 2px 8px;
+  border: 1px solid #E4E4E4;
+  font-family: "Open Sans", sans-serif;;
+}
+
 
 .title {
   color: #B3B3B3;
   font-size: 40px;
   color: white;
-  margin-top: 30px;
-  font-family: 'Merriweather', serif;
+  margin-top: 5px;
+  font-family:"Times New Roman", Times, serif;;
 }
 
 .title-text {
@@ -38,16 +46,5 @@ body {
 .title-text:hover {
   color: black;
   text-decoration: none;
-}
-
-.underline--magical {
-  background-image: linear-gradient(120deg, #FFFF03 0%, #FFFF03 100%);
-  background-repeat: no-repeat;
-  background-size: 100% 0.2em;
-  background-position: 0 88%;
-  transition: background-size 0.25s ease-in;
-  &:hover {
-    background-size: 100% 88%;
-  }
 }
 
